--- a/unit converter/app/build.gradle
+++ b/unit converter/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.app.unitconverter'
+    namespace 'com.app.acunitconverter'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.app.unitconverter"
+        applicationId "com.app.acunitconverter"
         minSdk 24
         targetSdk 33
         versionCode 1
