--- a/PalabraDelDia/app/build.gradle
+++ b/PalabraDelDia/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core:1.7.0'
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
