--- a/WyrmspanSheets/app/build.gradle
+++ b/WyrmspanSheets/app/build.gradle
@@ -3,15 +3,15 @@ plugins {
 }
 
 android {
-    namespace 'com.ac.funwithcapitals'
+    namespace 'com.ac.wyrmspanSheets'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.ac.funwithcapitals"
+        applicationId "com.ac.wyrmspanSheets"
         minSdk 24
         targetSdk 34
-        versionCode 2
-        versionName "1.1"
+        versionCode 1
+        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,9 +30,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
